infra_/security-group.tf
// Cria um grupo de segurança para permitir tráfego HTTP e HTTPS
resource "aws_security_group" "SG" {
  name        = "${var.environment}-${var.app_name}-sg"
  description = "Allow Port 80 and 443"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = var.project_tags
}
